# summoners

./: .gitignore  CMakeLists.txt  CMakeLists3.txt  CMakePresets.json  client.cpp  exampletest.cpp  server.cpp
cfg/: academy  all  convert.py  map  map2  map2d  map3
client/: AbilitySpriteHelper.h  Client.cpp  Client.h  Drawer.cpp  Drawer.h  MapWidget.cpp  MapWidget.h  MenuWidget.cpp  MenuWidget.h  Point.cpp  SerializeWidget.cpp  SerializeWidget.h  Widget.h
server/: FPSHandler.h  Game.cpp  Game.h  Player.cpp  Player.h  Server.cpp  Server.h
src/: Academy.cpp  Academy.h  CMakeLists.txt  Concepts.h  Entity.cpp  Entity.h  GeneralHealingSquad.cpp  GeneralHealingSquad.h  GeneralSquad.cpp  GeneralSquad.h  InteractiveSquad.cpp  InteractiveSquad.h  Map.cpp  Map.h  MoralHealingSquad.cpp  MoralHealingSquad.h  MoralSquad.cpp  MoralSquad.h  Obstacle.h  Point.h  Setter.h  Squads.h  Summoner.cpp  Summoner.h  Terrain.cpp  Terrain.h  Utils.h  toString.h
